--- a/quant/src/CMakeLists.txt
+++ b/quant/src/CMakeLists.txt
@@ -4,5 +4,5 @@ add_definitions(-std=c++11)
 add_definitions(-DUSER_DELTA=1)
 include_directories(/home/panghao/git/quant-choices/quant/EmQuantAPI  /home/panghao/include/zookeeper /home/panghao/include)
 link_directories(/home/panghao/libs/zookeeper /home/panghao/libs)
-add_executable(quant main.cpp kafka_client.cpp stock_info.cpp user_init.cpp user_app.cpp)
-target_link_libraries(quant zookeeper_mt rdkafka glog dl)
+add_executable(quant3 quant_util.cpp indictor_info.cpp css_info.cpp csq_info.cpp main.cpp kafka_client.cpp stock_info.cpp user_init.cpp user_app.cpp)
+target_link_libraries(quant3 zookeeper_mt rdkafka glog dl)
