--- a/quant/src/CMakeLists.txt
+++ b/quant/src/CMakeLists.txt
@@ -1,8 +1,12 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin/)
 SET(CMAKE_CXX_COMPILER "g++")
+SET(PRO_DIR "/home/panghao/git/quant-choices3")
 add_definitions(-std=c++11)
 add_definitions(-DUSER_DELTA=1)
-include_directories(/home/panghao/git/quant-choices/quant/EmQuantAPI  /home/panghao/include/zookeeper /home/panghao/include)
-link_directories(/home/panghao/libs/zookeeper /home/panghao/libs)
-add_executable(quant3 quant_util.cpp indictor_info.cpp css_info.cpp csq_info.cpp main.cpp kafka_client.cpp stock_info.cpp user_init.cpp user_app.cpp)
-target_link_libraries(quant3 zookeeper_mt rdkafka glog dl)
+add_definitions(-g)
+set(HH ${PRO_DIR}/quant/EmQuantAPI)
+message(${HH})
+include_directories(${PRO_DIR}/quant/EmQuantAPI  /home/panghao/include/zookeeper /home/panghao/include /home/panghao/include/hiredis /home/panghao/librdkafka)
+link_directories(${PRO_DIR}/quant/bin /home/panghao/libs/zookeeper /home/panghao/libs)
+add_executable(quant3 cst_handle.cpp kafka_producer.cpp syn_handle.cpp asyn_handle.cpp quant_code.cpp css_handle.cpp csq_handle.cpp quant_pack.cpp quant_task.cpp quant_util.cpp indictor_info.cpp  main.cpp kafka_client.cpp stock_info.cpp)
+target_link_libraries(quant3 quant hiredis zookeeper_mt rdkafka glog dl)
